--- a/templates/login.html
+++ b/templates/login.html
@@ -23,6 +23,7 @@
     <div class="row">
 
       <div class="col-lg-8 col-md-10 mx-auto content">
+        {% include "flash.html" %}
         {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}
       </div>
     </div>
