--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,10 @@
     </div>
   </header>
 
+  <div hidden>
+            {% include "flash.html" %}
+  </div>
+
   <!-- Main Content -->
   <div class="container">
     <div class="row">
@@ -32,19 +36,20 @@
           <p class="post-meta">Posted by
             <a href="#">{{post.author}}</a>
             on {{post.date}}
-          
-            <a href="{{url_for('delete_post', post_id=post.id) }}">✘</a>
-          
+            {% if id == 1 %}
+              <a href="{{url_for('delete_post', post_id=post.id) }}">✘</a>
+            {% endif %}
           </p>
         </div>
         <hr>
         {% endfor %}
 
-
-        <!-- New Post -->
-        <div class="clearfix">
-          <a class="btn btn-primary float-right" href="{{url_for('add_new_post')}}">Create New Post</a>
-        </div>
+        {% if id == 1 %}
+          <!-- New Post -->
+          <div class="clearfix">
+            <a class="btn btn-primary float-right" href="{{url_for('add_new_post')}}">Create New Post</a>
+          </div>
+        {% endif %}
       </div>
     </div>
   </div>
