--- a/templates/register.html
+++ b/templates/register.html
@@ -20,6 +20,8 @@
   </header>
 
   <div class="container">
+    {% include "flash.html" %}
+
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
        
