--- a/templates/post.html
+++ b/templates/post.html
@@ -26,13 +26,15 @@
             {{ post.body|safe }}
           <hr>
 
+<!-- If user id is 1 then they can see the Edit Post button -->
+          {% if current_user.id == 1 %}
             <div class="clearfix">
             <a class="btn btn-primary float-right" href="{{url_for('edit_post', post_id=post.id)}}">Edit Post</a>
             </div>
+          {% endif %}
 
 
-
-<!--           Comments Area -->
+<!-- Comments Area -->
           <div class="col-lg-8 col-md-10 mx-auto comment">
               <ul class="commentList">
                 <li>
