--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>Angela's Blog</h1>
+            <h1>John's Blog</h1>
             <span class="subheading">A collection of random musings.</span>
           </div>
         </div>
@@ -34,7 +34,7 @@
             </h3>
           </a>
           <p class="post-meta">Posted by
-            <a href="#">{{post.author}}</a>
+            <a href="#">{{post.author.name}}</a>
             on {{post.date}}
 <!-- If user id is 1 then they can see the Delete button -->
             {% if current_user.id == 1 %}
