--- a/templates/header.html
+++ b/templates/header.html
@@ -35,6 +35,14 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
+
+      <!-- Display currently logged in user in the navbar -->
+      {% if current_user.is_authenticated: %}
+          <li class="nav-item">
+            <a class="nav-link" href="#">{{ current_user.name }}</a>
+          </li>
+      {% endif %}
+
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('get_all_posts') }}">Home</a>
           </li>
