--- a/templates/post.html
+++ b/templates/post.html
@@ -38,18 +38,21 @@
 <!-- Comments Area -->
           <div class="col-lg-8 col-md-10 mx-auto comment">
               <ul class="commentList">
-                <!-- TODO: Pass a list of dictionary containing the first 10 comments.
-                         Display these comments using a for loop.
-                         Add a button to display the next 10 comments. -->
-                <li>
-                    <div class="commenterImage">
-                      <img src="https://pbs.twimg.com/profile_images/744849215675838464/IH0FNIXk.jpg"/>
-                    </div>
-                    <div class="commentText">
-                      <p>Some comment</p>
-                      <span class="date sub-text">comment author name</span>
-                    </div>
-                </li>
+
+                <!-- Display the comments using a for loop. -->
+                {% for comment in comments %}
+                  <li>
+                      <div class="commenterImage">
+<!--                        <img src="https://pbs.twimg.com/profile_images/744849215675838464/IH0FNIXk.jpg"/>-->
+                        <img src="{{ comment.commenter.email | gravatar }}">
+                      </div>
+                      <div class="commentText">
+                        <p>{{ comment.body }}</p>
+                        <span class="date sub-text">{{ comment.commenter.name }} {{ comment.date }}</span>
+                      </div>
+                  </li>
+                {% endfor %}
+
               </ul>
             </div>
 
