Add link to favicon.ico in header.html

--- a/templates/header.html
+++ b/templates/header.html
@@ -21,6 +21,10 @@
   <!-- Custom styles for this template -->
   <link href="{{ url_for('static', filename='css/clean-blog.min.css')}}" rel="stylesheet">
 
+  <!-- Link to favicon,ico -->
+  <!-- See https://flask.palletsprojects.com/en/2.0.x/patterns/favicon/ -->
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+
 </head>
 
 <body>
